<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainDriveActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp">

    <Button
        android:id="@+id/confirm_received_trackingnumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_recieved_trackingnumber"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textcolor_btns"/>

    <Button
        android:id="@+id/btn_checkin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textcolor_btns"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textcolor_btns"
        android:layout_marginTop="15dp"/>



    <Button
        android:id="@+id/btn_show_my_orders_of_runtimesheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_my_orders_in_runtimesheet"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textcolor_btns"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_show_my_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_my_orders_end_of_day"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textcolor_btns"
        android:layout_marginTop="15dp"/>



</LinearLayout>