<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/custome_bg_for_order_details_for_driver">

    <TextView
        android:id="@+id/txt_tracking_number_reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tracking_number"
        android:textSize="@dimen/font_size_for_text_of_app"

        android:textColor="@color/white" />


    <EditText
        android:id="@+id/edit_rejectinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_reject_reason"
        android:textColorHint="@color/white"
        android:textSize="@dimen/font_size_for_text_of_app"
        android:textColor="@color/white"
        >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_reject"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/Reject"
            android:textSize="@dimen/font_size_for_button_of_app"
            android:background="@drawable/bg_btn"
            android:textColor="@color/textcolor_btns"/>
        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Dismiss"
            android:textSize="@dimen/font_size_for_text_of_app"

            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>